// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parser function expressions parses colon-separated function declarations 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "type": "Literal",
                "value": BrsString {
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": Object {
              "print": Object {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
            "type": "Print",
          },
        ],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses functions with default argument expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 4,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses functions with implicit-dynamic arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses functions with typed arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": Object {
            "kind": 3,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "separator",
          },
          "type": Object {
            "kind": 12,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses functions with typed arguments and default expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses minimal empty function expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses non-empty function expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "type": "Literal",
                "value": BrsString {
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": Object {
              "print": Object {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
            "type": "Print",
          },
        ],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser function expressions parses return types 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 11,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser sub expressions parses minimal sub expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 11,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser sub expressions parses non-empty sub expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "type": "Literal",
                "value": BrsString {
                  "kind": 3,
                  "value": "Lorem ipsum",
                },
              },
            ],
            "tokens": Object {
              "print": Object {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
            "type": "Print",
          },
        ],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [],
      "returns": 11,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser sub expressions parses subs with default argument expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 4,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "c",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 11,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser sub expressions parses subs with implicit-dynamic arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 10,
            "location": Object {
              "end": Object {
                "column": -1,
                "line": -1,
              },
              "file": "(stdlib)",
              "start": Object {
                "column": -1,
                "line": -1,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser sub expressions parses subs with typed arguments 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "str",
          },
          "type": Object {
            "kind": 3,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "count",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "cb",
          },
          "type": Object {
            "kind": 8,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser sub expressions parses subs with typed arguments and default expressions 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "_",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndSub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end sub",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Sub",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "sub",
      },
      "parameters": Array [
        Object {
          "defaultValue": Literal {
            "_location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "type": "Literal",
            "value": Int32 {
              "kind": 4,
              "value": 3,
            },
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "a",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
        Object {
          "defaultValue": Binary {
            "left": Variable {
              "name": Object {
                "isReserved": false,
                "kind": "Identifier",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "a",
              },
              "type": "Variable",
            },
            "right": Literal {
              "_location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "type": "Literal",
              "value": Int32 {
                "kind": 4,
                "value": 5,
              },
            },
            "token": Object {
              "isReserved": false,
              "kind": "Plus",
              "literal": undefined,
              "location": Object {
                "end": Object {
                  "column": -9,
                  "line": -9,
                },
                "start": Object {
                  "column": -9,
                  "line": -9,
                },
              },
              "text": "+",
            },
            "type": "Binary",
          },
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "file": undefined,
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "name": Object {
            "isReserved": false,
            "kind": "Identifier",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "b",
          },
          "type": Object {
            "kind": 4,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
          },
        },
      ],
      "returns": 11,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser usage allows function expressions in assignment RHS 1`] = `
Array [
  Assignment {
    "name": Object {
      "isReserved": false,
      "kind": "Identifier",
      "literal": undefined,
      "location": Object {
        "end": Object {
          "column": -9,
          "line": -9,
        },
        "start": Object {
          "column": -9,
          "line": -9,
        },
      },
      "text": "anonymousFunction",
    },
    "tokens": Object {
      "equals": Object {
        "isReserved": false,
        "kind": "Equal",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "=",
      },
    },
    "type": "Assignment",
    "value": Function {
      "body": Block {
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "file": undefined,
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "statements": Array [
          Print {
            "expressions": Array [
              Literal {
                "_location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "type": "Literal",
                "value": BrsString {
                  "kind": 3,
                  "value": "I'm anonymous",
                },
              },
            ],
            "tokens": Object {
              "print": Object {
                "isReserved": true,
                "kind": "Print",
                "literal": undefined,
                "location": Object {
                  "end": Object {
                    "column": -9,
                    "line": -9,
                  },
                  "start": Object {
                    "column": -9,
                    "line": -9,
                  },
                },
                "text": "print",
              },
            },
            "type": "Print",
          },
        ],
        "type": "Block",
      },
      "endKeyword": Object {
        "isReserved": false,
        "kind": "EndFunction",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "end function",
      },
      "keyword": Object {
        "isReserved": true,
        "kind": "Function",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": "function",
      },
      "parameters": Array [],
      "returns": 10,
      "type": "Expr_Function",
    },
  },
]
`;

exports[`parser usage allows sub expressions in call arguments 1`] = `
Array [
  Expression {
    "expression": Call {
      "args": Array [
        Function {
          "body": Block {
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "file": undefined,
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "statements": Array [
              Print {
                "expressions": Array [
                  Literal {
                    "_location": Object {
                      "end": Object {
                        "column": -9,
                        "line": -9,
                      },
                      "start": Object {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "type": "Literal",
                    "value": BrsString {
                      "kind": 3,
                      "value": "I'm a callback",
                    },
                  },
                ],
                "tokens": Object {
                  "print": Object {
                    "isReserved": true,
                    "kind": "Print",
                    "literal": undefined,
                    "location": Object {
                      "end": Object {
                        "column": -9,
                        "line": -9,
                      },
                      "start": Object {
                        "column": -9,
                        "line": -9,
                      },
                    },
                    "text": "print",
                  },
                },
                "type": "Print",
              },
            ],
            "type": "Block",
          },
          "endKeyword": Object {
            "isReserved": false,
            "kind": "EndFunction",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "end function",
          },
          "keyword": Object {
            "isReserved": true,
            "kind": "Function",
            "literal": undefined,
            "location": Object {
              "end": Object {
                "column": -9,
                "line": -9,
              },
              "start": Object {
                "column": -9,
                "line": -9,
              },
            },
            "text": "function",
          },
          "parameters": Array [],
          "returns": 10,
          "type": "Expr_Function",
        },
      ],
      "callee": Variable {
        "name": Object {
          "isReserved": false,
          "kind": "Identifier",
          "literal": undefined,
          "location": Object {
            "end": Object {
              "column": -9,
              "line": -9,
            },
            "start": Object {
              "column": -9,
              "line": -9,
            },
          },
          "text": "acceptsCallback",
        },
        "type": "Variable",
      },
      "closingParen": Object {
        "isReserved": false,
        "kind": "RightParen",
        "literal": undefined,
        "location": Object {
          "end": Object {
            "column": -9,
            "line": -9,
          },
          "start": Object {
            "column": -9,
            "line": -9,
          },
        },
        "text": ")",
      },
      "type": "Call",
    },
    "type": "Expression",
  },
]
`;
